--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.2",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
+    "js-cookie": "^3.0.5",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -25,11 +26,11 @@
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
-    "typescript": "5.3.3",
-    "typescript-cookie": "^1.0.6"
+    "typescript": "5.3.3"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-bootstrap": "^0.32.35",
     "@types/react-redux": "^7.1.33",
     "@types/redux-logger": "^3.0.12"
